BARC UAT/src/objects/Kitting__c.object
<CustomObject>
    <fields>
        <fullName>Is_Added_To_Kitting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Added To Kitting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kitting_Type__c</fullName>
        <label>Kitting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Kitting_Type_Master</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Faulty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Kitting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC#{00000000}</displayFormat>
        <label>Kitting Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kitting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>